first changes in css

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star" id="stella1"></i></li>
+        		<li><i class="fa fa-star" id="stella2"></i></li>
+        		<li><i class="fa fa-star" id="stella3"></i></li>
         	</ul>
 
         	<span class="moves">3</span> Moves
@@ -31,7 +31,7 @@
         </section>
 
         <ul class="deck">
-            
+
         </ul>
     </div>
 
