updated disable class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>Simo's Memory</h1>
         </header>
 
         <section class="score-panel">
