--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         	<span class="moves">3</span> Moves
 
-            <div class="restart" onclick="ciao()">
+            <div class="restart" onclick="newBoard()">
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
