--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         		<li><i class="fa fa-star" id="stella3"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves"></span> Moves
 
             <div class="restart" onclick="newBoard()">
         		<i class="fa fa-repeat"></i>
