started timer function

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
         	<span class="moves"></span> Moves
 
+            <div id="timer">
+            </div>
+
             <div class="restart" onclick="newBoard()">
         		<i class="fa fa-repeat"></i>
         	</div>
