started modal html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         </ul>
     </div>
 
+    <div class="modal">
+        <div id="popup">
+        <h2> You rock!</h2>
+        <p>You made it! Let's see...</p>
+        </div>
+            
+        
+    </div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
