--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         	<span class="moves"></span> Moves
 
-            <div id="timer">
+            <div id="timer">0:0
             </div>
 
             <div class="restart" onclick="newBoard()">
