--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Simone's Matching Game</title>
     <meta name="description" content="Udacity Memory Game">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
@@ -23,7 +23,7 @@
         		<li><i class="fa fa-star" id="stella3"></i></li>
         	</ul>
 
-        	<span class="moves"></span> Moves
+        	<span class="moves"></span> Move(s)
 
             <div id="timer">0:0
             </div>
