--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="popup">
         <h2>You rock!</h2>
         <p>You made it! Let's see...</p>
-        <p>You finished in <span id="totalMoves"></span> moves;
+        <p>You finished in <span id="totalMoves"></span> moves
         </p>
         <p>It tooks you <span id="totalTime"></span>
         </p>
