--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         		<li><i class="fa fa-star" id="stella3"></i></li>
         	</ul>
 
-        	<span class="moves"></span> Move(s)
+        	<span class="moves"></span> Moves
 
             <div id="timer">0:0
             </div>
